--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   },
   "dependencies": {
     "@dword-design/eslint-config": "^1.16.4",
+    "depcheck-package-name": "^1.0.0",
     "execa": "^5.0.0",
     "fs-extra": "^9.0.0",
-    "get-package-name": "^1.1.0",
     "output-files": "^1.1.16"
   },
   "devDependencies": {
