--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dist"
   ],
   "scripts": {
-    "clean": "base clean",
+    "check-unknown-files": "base check-unknown-files",
     "commit": "base commit",
     "dev": "base dev",
     "lint": "base lint",
@@ -26,7 +26,7 @@
     "output-files": "^1.1.16"
   },
   "devDependencies": {
-    "@dword-design/base": "^6.15.1"
+    "@dword-design/base": "^7.0.0"
   },
   "publishConfig": {
     "access": "public"
