--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "funding": "https://github.com/sponsors/dword-design",
   "license": "MIT",
   "author": "Sebastian Landwehr <info@sebastianlandwehr.com>",
+  "type": "module",
+  "exports": "./dist/index.js",
   "main": "dist/index.js",
   "files": [
     "dist"
@@ -19,17 +21,17 @@
     "test": "base test"
   },
   "dependencies": {
-    "@dword-design/eslint-config": "^2.0.0",
+    "@dword-design/eslint-config": "^3.0.2",
     "depcheck-package-name": "^2.0.0",
-    "execa": "^5.0.0",
+    "execa": "^6.1.0",
     "fs-extra": "^10.0.0",
     "output-files": "^2.0.0"
   },
   "devDependencies": {
-    "@dword-design/base": "^8.0.0"
+    "@dword-design/base": "^9.0.5"
   },
   "engines": {
-    "node": ">=12"
+    "node": ">=14"
   },
   "publishConfig": {
     "access": "public"
